[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-beamsearch"
version = "0.1.0"
description = "Beam search plugin for SGLang via monkeypatching"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
sglang-beamsearch-bench = "sglang_beamsearch.bench:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
# sglang is installed from the local checkout
sglang = { path = "../sglang/python", editable = true }
